[gd_scene load_steps=12 format=3 uid="uid://667t20wotwa1"]

[ext_resource type="Texture2D" uid="uid://dw06muakrpn1s" path="res://asset/texture/icon/youpi_logo.svg" id="1_6no6w"]
[ext_resource type="Script" path="res://scene/interface/main_menu/main_menu_content.gd" id="1_fk552"]
[ext_resource type="Script" path="res://scripts/animation/animation_component.gd" id="2_vxwmh"]
[ext_resource type="Resource" uid="uid://cq0hdycpl4v3p" path="res://data/interface/animations/main_button_hover.tres" id="3_jdfmi"]
[ext_resource type="Resource" uid="uid://dwugeyfl5vkly" path="res://data/interface/animations/main_button_down.tres" id="4_escsm"]
[ext_resource type="Resource" uid="uid://dq88nfgaijl3f" path="res://data/interface/animations/main_button_enter.tres" id="5_qkppy"]
[ext_resource type="Script" path="res://scripts/animation/animation_settings.gd" id="6_npnj5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipxyy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xme1n"]

[sub_resource type="LabelSettings" id="LabelSettings_6e7aj"]
font_size = 75
shadow_size = 0
shadow_color = Color(0.299547, 0.299547, 0.299547, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="Resource" id="Resource_utlbv"]
script = ExtResource("6_npnj5")
time = 1.0
delay = 1.0
transition = 1
easing = 2
position = Vector2(0, 0)
scale = Vector2(0, 0)
rotation = 0.0
size = Vector2(0, 0)
modulate = Color(1, 1, 1, 0.00392157)

[node name="MainMenuContent" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1_fk552")

[node name="Logo" type="Panel" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_ipxyy")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Logo"]
modulate = Color(1, 1, 1, 0.47451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6no6w")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 45

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/Host"]
script = ExtResource("2_vxwmh")
hover_resource = ExtResource("3_jdfmi")
down_resource = ExtResource("4_escsm")
enter_resource = ExtResource("5_qkppy")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_xme1n")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Join" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/PanelContainer/VBoxContainer/Join" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_vxwmh")
hover_resource = ExtResource("3_jdfmi")
down_resource = ExtResource("4_escsm")
enter_resource = ExtResource("5_qkppy")
wait_for = NodePath("../../../../Host/AnimationComponent")

[node name="IpInput" type="LineEdit" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
placeholder_text = "IP adress"

[node name="PortInput" type="LineEdit" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
placeholder_text = "Port"

[node name="Connect" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Connect !"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/PanelContainer/VBoxContainer/Connect"]
script = ExtResource("2_vxwmh")
hover_resource = ExtResource("3_jdfmi")

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/Settings" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_vxwmh")
hover_resource = ExtResource("3_jdfmi")
down_resource = ExtResource("4_escsm")
enter_resource = ExtResource("5_qkppy")
wait_for = NodePath("../../PanelContainer/VBoxContainer/Join/AnimationComponent")

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit to desktop"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/Exit" node_paths=PackedStringArray("wait_for")]
script = ExtResource("2_vxwmh")
hover_resource = ExtResource("3_jdfmi")
down_resource = ExtResource("4_escsm")
enter_resource = ExtResource("5_qkppy")
wait_for = NodePath("../../Settings/AnimationComponent")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Untitled Game"
label_settings = SubResource("LabelSettings_6e7aj")

[node name="AnimationComponent" type="Node" parent="GameTitle"]
script = ExtResource("2_vxwmh")
enter_resource = SubResource("Resource_utlbv")

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
